# trainproof

./: .gitignore  CHANGELOG.md  CONTRACTS.md  EVIDENCE_MATRIX.md  README.md  ROADMAP.md  RULES.md  SPEC.md  SPEC_DECISIONS.md  pyproject.toml
examples/gallery/: README.md
examples/gallery/bad_labels/: run_meta.json  trainer_state.json
examples/gallery/fp16_nan/: run_meta.json  trainer_state.json
examples/gallery/healthy/: run_meta.json  trainer_state.json
examples/gallery/lr_hot/: run_meta.json  trainer_state.json
examples/gallery/lr_zero/: run_meta.json  trainer_state.json
examples/gallery/overfit/: run_meta.json  trainer_state.json
recon/: LOG_INVENTORY.md
src/trainproof/: __init__.py  adapters.py  cli.py  compare.py  epoch.py  preflight.py  report.py  rules.py  sarif.py  watch.py
tests/: test_adapters.py  test_cli_features.py  test_compare.py  test_contracts.py  test_data.py  test_epoch.py  test_golden_gallery.py  test_hf_callback.py  test_preflight.py  test_v080_features.py  test_v090_features.py  test_watch.py
tests/fixtures/: clean.jsonl  coqui_trainer_slice.txt  dead_noisy.jsonl  diverging.jsonl  dupes.jsonl  empties.jsonl  flat.jsonl  healthy.jsonl  malformed.jsonl  nan.jsonl  trainer_state_diverging.json  trainer_state_healthy.json
tests/golden/: compare_bad_labels_vs_healthy.json  compare_fp16_nan_vs_healthy.json  compare_healthy_vs_healthy.json  compare_lr_hot_vs_healthy.json  compare_lr_zero_vs_healthy.json  epoch_bad_labels.json  epoch_fp16_nan.json  epoch_healthy.json  epoch_lr_hot.json  epoch_lr_zero.json  epoch_overfit.json
(+5 files in other folders)
