[project]
name = "trainproof"
version = "0.4.0"
description = "A deterministic linter for ML training runs: dataset, tokenizer, and epoch logs."
authors = [{name = "Panagiotis (Panos) Gkilis", email = "bedvibe@bedvibe.studio"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "soundfile",
    "ttsproof"
]

[project.scripts]
trainproof = "trainproof.cli:main"

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"
